// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it adds 1`] = `
Stack {
  "data": Array [
    "a",
    "b",
    "c",
    "d",
  ],
}
`;

exports[`it pops 1`] = `
Stack {
  "data": Array [
    "a",
    "b",
    "c",
  ],
}
`;
